[package]
name = "swagger-axum-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
dotenvy = "0.15"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "macros", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
validator = { version = "0.20", features = ["derive"] }
async-trait = "0.1"
regex = "1"
lazy_static = "1"
